# claude-code-parity-apr

./: .gitignore  .pmat-metrics.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
.pmat-work/PMAT-683/: contract.json
contracts/: claude-code-parity-apr-v1.yaml
crates/ccpa-cli/: Cargo.toml
crates/ccpa-cli/src/: cmd_corpus.rs  cmd_coverage.rs  cmd_diff.rs  cmd_measure.rs  cmd_validate.rs  lib.rs  main.rs
crates/ccpa-cli/tests/: cli.rs
crates/ccpa-differ/: Cargo.toml
crates/ccpa-differ/src/: corpus.rs  coverage.rs  equivalence.rs  file_mutation.rs  lib.rs  score.rs  sovereignty.rs
crates/ccpa-differ/tests/: falsify_ccpa_004_tool_equivalence.rs  falsify_ccpa_005_file_mutation.rs  falsify_ccpa_006_sovereignty.rs  falsify_ccpa_007_coverage.rs  falsify_ccpa_008_corpus.rs  falsify_ccpa_008_parity_score.rs
crates/ccpa-recorder/: Cargo.toml
crates/ccpa-recorder/src/: lib.rs  parse.rs  response.rs  session.rs  sse.rs
crates/ccpa-recorder/tests/: falsify_ccpa_recorder_parse.rs  falsify_ccpa_recorder_response.rs  falsify_ccpa_recorder_session.rs  falsify_ccpa_recorder_sse.rs
crates/ccpa-replayer/: Cargo.toml
crates/ccpa-replayer/src/: driver.rs  lib.rs  orchestrator.rs
crates/ccpa-replayer/tests/: falsify_ccpa_002_003_replay.rs
crates/ccpa-trace/: Cargo.toml
crates/ccpa-trace/src/: lib.rs
crates/ccpa-trace/tests/: falsify_ccpa_001_roundtrip.rs
docs/roadmaps/: roadmap.yaml
docs/specifications/: claude-code-parity-apr-poc.md
fixtures/canonical/: measured-parity.json
fixtures/canonical/0001-edit-readme/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0002-fix-failing-test/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0003-create-new-file/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0004-grep-and-edit/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0005-bash-cascade/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0006-subagent-spawn/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0007-mcp-tool-call/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0008-slash-help/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0009-claude-md-memory/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0010-permission-mode-ask/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0011-web-fetch/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0012-non-interactive-mode/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0013-session-management/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0014-custom-agent/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0015-worktree-isolation/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0016-configuration-ladder/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0017-managed-org-policy/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0018-hook-pre-tool-use/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0019-skill-auto-match/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0020-bash-multiline-pipe/: meta.toml  student.ccpa-trace.jsonl  teacher.ccpa-trace.jsonl
fixtures/canonical/0021-edit-replace-all/: meta.toml  student.ccpa-trace.jsonl  (+1 more)
fixtures/regression/: README.md
fixtures/synthetic/: 0001-edit-readme-student-drift.ccpa-trace.jsonl  0001-edit-readme-student-perfect.ccpa-trace.jsonl  0001-edit-readme-teacher.ccpa-trace.jsonl
scripts/: check-doc-drift.sh  install-hooks.sh  pin-check-roundtrip.sh  pin-check.sh  smoke-m32d.sh  test-doc-drift.sh
(+51 files in other folders)
