[workspace]
resolver = "2"
members = [
    "crates/ccpa-trace",
    "crates/ccpa-recorder",
    "crates/ccpa-differ",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["PAIML Engineering"]
repository = "https://github.com/paiml/claude-code-parity-apr"
homepage = "https://github.com/paiml/claude-code-parity-apr"
description = "Record-replay-distill harness proving `apr code` is byte-stable against Claude Code at the action-stream level."
exclude = [
    ".git/**",
    ".github/**",
    "fixtures/**",
    "scripts/**",
    "Makefile",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
