[package]
name = "ccpa-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JSONL trace schema for claude-code-parity-apr — see contracts/claude-code-parity-apr-v1.yaml § trace_schema."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
